<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budget</string>
    <string name="hint">Create Transaction</string>
    <string name="action_settings">Settings</string>
    <string name="button">+  CREATE TRANSACTION</string>
    <string name="total">0</string>
    <string name="title_activity_lock_screen">LockScreen</string>
    <string name="strNoRecordsFound">Add a new item now!</string>
    <string name="title_activity_input">Input</string>
    <string name="multilines">Line1Line1\nLine2Line2</string>
    <string name="lockmessage1">I AM</string>
    <string name="lockmessage2">LOCKED</string>
    <string name="fix">\n</string>
    <string name="number0">0\n</string>
    <string name="number1">1\n</string>
    <string name="number2">2\nABC</string>
    <string name="number3">3\nDEF</string>
    <string name="number4">4\nGHI</string>
    <string name="number5">5\nJKL</string>
    <string name="number6">6\nMNO</string>
    <string name="number7">7\nPQRS</string>
    <string name="number8">8\nTUV</string>
    <string name="number9">9\nWXYZ</string>
    <string name="title_activity_category">Category</string>
    <string name="hello_world">Hello world!</string>


    <string name="category_prompt">Choose a category</string>
    <string-array name="category_array">
        <item>Food</item>
        <item>Beverage</item>
        <item>Grocery</item>
        <item>Rent</item>
        <item>Health</item>
        <item>Internet</item>
        <item>Electric</item>
        <item>Water</item>
        <item>Entertainment</item>
        <item>Gas</item>
        <item>Parking</item>
    </string-array>



</resources>
