<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lockmessage1"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_weight="1"
        />
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:id="@+id/lock">

        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="."
            android:gravity="center"
            android:textSize="64sp"
            />
        <TextView

            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="."
            android:gravity="center_horizontal|center_vertical"
            android:textSize="64sp"
            />
        <TextView

            android:id="@+id/third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="."
            android:gravity="center_horizontal|center_vertical"
            android:textSize="64sp"
            />
        <TextView

            android:id="@+id/fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="."
            android:gravity="center_horizontal|center_vertical"
            android:textSize="64sp"
            />

    </TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lockmessage2"
        android:gravity="center"
        android:id="@+id/textViewLocked"
        android:textStyle="bold"
        />


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*"
        android:orientation="horizontal"
        >


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number1"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number2"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number3"
                android:layout_weight="1"
                android:textStyle="bold"
                />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number4"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number5"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/number6"
                android:layout_weight="1"
                android:textColor="@color/black_light"
                android:textStyle="bold"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            >
            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number7"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number8"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"

                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/number9"
                android:layout_weight="1"
                android:textStyle="bold"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:layout_weight="1"
            >
            <Button
                android:id="@+id/buttonBlank"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/fix"
                android:background="@android:color/transparent"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/number0"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/fix"
                android:background="@android:color/transparent"
                android:textStyle="bold"/>

        </TableRow>


    </TableLayout>








</LinearLayout>


